<resources>
    <string name="app_name">Como foi meu dia?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_profile">Digite o nome do perfil</string>
    <string name="app_title">Como foi meu dia?</string>
    <string name="button_create">Criar</string>
    <string name="button_new_profile">Criar novo perfil</string>
    <string name="button_begin_rotine">Iniciar rotina</string>
    <string name="button_change_profile">Trocar perfil</string>
    <string name="button_new_day">Novo dia</string>
    <string name="button_past_days">Dias passados</string>
    <string name="button_future">Futuro</string>
    <string name="button_next">Terminou?</string>
    <string name="text_field_name">Nome</string>
    <string name="title_activity_begin_routine">Começar rotina!</string>
    <string name="title_activity_change_profile">Escolha um perfil</string>
    <string name="title_activity_choose_activities">Escolha as atividades</string>
    <string name="profile_name_required">Coloque um nome!</string>
    <string name="profile_name_size_invalid">Nome pequeno! (Menor que 3 letras)</string>
    <string name="profile_create_ok">Perfil criado!</string>
    <string name="profile_create_error">Um erro ocorreu, tente novamente.</string>
    <string name="title_activity_distribute_activities">Arraste para o periodo!</string>
    <string name="title_activity_show_activities">Atividades realizadas</string>
    <string name="button_save_day">Salvar dia</string>
    <string name="title_activity_choose_day">Escolha o dia</string>
    <string name="category_food">Comida</string>
    <string name="category_medicine">Saúde / Higiene</string>
    <string name="category_social">Social</string>
    <string name="category_fun">Diversão</string>
    <string name="category_study">Estudos</string>
    <string name="button_edit_day">Editar dia</string>
</resources>
