<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.prjproject.tcc.BeginRoutineActivity"
    tools:showIn="@layout/activity_begin_routine">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_future"
        android:id="@+id/btnFuture"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        android:layout_alignLeft="@+id/btnPastDays"
        android:layout_alignStart="@+id/btnPastDays"
        android:layout_alignRight="@+id/btnPastDays"
        android:layout_alignEnd="@+id/btnPastDays" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_past_days"
        android:id="@+id/btnPastDays"
        android:layout_above="@+id/btnFuture"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new_day"
        android:id="@+id/btnNewDay"
        android:layout_above="@+id/btnPastDays"
        android:layout_alignRight="@+id/btnPastDays"
        android:layout_alignEnd="@+id/btnPastDays"
        android:layout_alignLeft="@+id/btnPastDays"
        android:layout_alignStart="@+id/btnPastDays" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/txtTitle2"
        android:layout_marginTop="243dp"
        android:textSize="112sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
