<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        style="@style/btnStyleOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_begin_rotine"
        android:id="@+id/btnBeginRoutine"
        android:textSize="@dimen/button_text_size"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/main_button_bottom_margin_large"
        android:layout_alignLeft="@+id/btnChangeProfile"
        android:layout_alignStart="@+id/btnChangeProfile"
        android:layout_alignRight="@+id/btnChangeProfile"
        android:layout_alignEnd="@+id/btnChangeProfile"
        android:enabled="false" />

    <Button
        style="@style/btnStyleOrange"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change_profile"
        android:id="@+id/btnChangeProfile"
        android:textSize="@dimen/button_text_size"
        android:layout_above="@+id/btnBeginRoutine"
        android:layout_alignRight="@+id/btnNewProfile"
        android:layout_alignEnd="@+id/btnNewProfile"
        android:layout_alignLeft="@+id/btnNewProfile"
        android:layout_alignStart="@+id/btnNewProfile" />

    <Button
        style="@style/btnStyleOrange"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new_profile"
        android:id="@+id/btnNewProfile"
        android:textSize="@dimen/button_text_size"
        android:layout_above="@+id/btnChangeProfile"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/txtTitle"
        android:textSize="@dimen/title_text_size"
        android:background="@drawable/border_shadow"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textColor="@color/titlecolor"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvProfileLogin"
        android:textSize="@dimen/subtitle_small_text_size"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginBottom="@dimen/main_login_margin_bottom"
        android:layout_above="@+id/btnNewProfile"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:textColor="@color/titlecolor"/>
</RelativeLayout>
