<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.ShowActivitiesActivity"
    tools:showIn="@layout/activity_show_activities">

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/layout_undistributed"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="100%">



        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="7.5%"
            app:layout_widthPercent="100%"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_show_activities"
            android:id="@+id/txtTitleDistribute"
            android:background="@drawable/border_shadow"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="@dimen/subtitle_small_text_size"
            android:layout_marginBottom="@dimen/item_margin_large"/>

        <ToggleButton
            android:id="@+id/btnToggleMorning"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textOff="Manhã"
            android:textOn="Manhã"
            app:layout_heightPercent="7.5%"
            app:layout_widthPercent="25%"
            android:layout_below="@id/txtTitleDistribute"
            />
        <ToggleButton
            android:id="@+id/btnToggleAfternoon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textOff="Tarde"
            android:textOn="Tarde"
            app:layout_heightPercent="7.5%"
            app:layout_widthPercent="25%"
            android:layout_below="@id/txtTitleDistribute"
            android:layout_toRightOf="@id/btnToggleMorning"
            />
        <ToggleButton
            android:id="@+id/btnToggleEvening"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textOff="Noite"
            android:textOn="Noite"
            app:layout_heightPercent="7.5%"
            app:layout_widthPercent="25%"
            android:layout_below="@id/txtTitleDistribute"
            android:layout_toRightOf="@id/btnToggleAfternoon"
            />
        <ToggleButton
            android:id="@+id/btnToggleDawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textOff="Madrugada"
            android:textOn="Madrugada"
            app:layout_heightPercent="7.5%"
            app:layout_widthPercent="25%"
            android:layout_below="@id/txtTitleDistribute"
            android:layout_toRightOf="@id/btnToggleEvening"
            />

        <ImageSwitcher
            android:id="@+id/imageSwitcherDayPeriod"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="40%"
            app:layout_widthPercent="90%"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/btnToggleMorning"
            android:layout_marginTop="@dimen/item_margin_large">
        </ImageSwitcher>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="7%"
            app:layout_widthPercent="19.5%"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_food"
            android:id="@+id/txtCategoryFood"
            android:textSize="@dimen/category_name_text_size"
            android:layout_below="@+id/imageSwitcherDayPeriod"
            android:background="@color/foodcolor"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="@dimen/item_margin_top_small"
            android:layout_marginRight="@dimen/item_margin_right_small"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="7%"
            app:layout_widthPercent="19.5%"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_medicine"
            android:id="@+id/txtCategoryMedicine"
            android:textSize="@dimen/category_name_text_size"
            android:layout_below="@+id/imageSwitcherDayPeriod"
            android:layout_toRightOf="@+id/txtCategoryFood"
            android:background="@color/medcolor"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="@dimen/item_margin_top_small"
            android:layout_marginRight="@dimen/item_margin_right_small"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="7%"
            app:layout_widthPercent="19.5%"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_fun"
            android:id="@+id/txtCategoryFun"
            android:textSize="@dimen/category_name_text_size"
            android:layout_below="@+id/imageSwitcherDayPeriod"
            android:layout_toRightOf="@+id/txtCategoryMedicine"
            android:background="@color/funcolor"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="@dimen/item_margin_top_small"
            android:layout_marginRight="@dimen/item_margin_right_small"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="7%"
            app:layout_widthPercent="19.5%"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_study"
            android:id="@+id/txtCategoryStudy"
            android:textSize="@dimen/category_name_text_size"
            android:layout_below="@+id/imageSwitcherDayPeriod"
            android:layout_toRightOf="@+id/txtCategoryFun"
            android:background="@color/studycolor"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="@dimen/item_margin_top_small"
            android:layout_marginRight="@dimen/item_margin_right_small"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="7%"
            app:layout_widthPercent="19.5%"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category_social"
            android:id="@+id/txtCategorySocial"
            android:textSize="@dimen/category_name_text_size"
            android:layout_below="@+id/imageSwitcherDayPeriod"
            android:layout_toRightOf="@+id/txtCategoryStudy"
            android:background="@color/socialcolor"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginTop="@dimen/item_margin_top_small"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="19.5%"
            android:layout_below="@id/txtCategoryFood"
            android:id="@+id/listViewFoodShow"
            android:scrollbars="horizontal"
            android:background="@color/foodcolor"
            android:layout_marginRight="@dimen/item_margin_right_small"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="19.5%"
            android:layout_below="@id/txtCategoryFood"
            android:layout_toRightOf="@id/listViewFoodShow"
            android:id="@+id/listViewMedicineShow"
            android:scrollbars="horizontal"
            android:background="@color/medcolor"
            android:layout_marginRight="@dimen/item_margin_right_small"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="19.5%"
            android:layout_below="@id/txtCategoryFood"
            android:layout_toRightOf="@id/listViewMedicineShow"
            android:id="@+id/listViewFunShow"
            android:scrollbars="horizontal"
            android:background="@color/funcolor"
            android:layout_marginRight="@dimen/item_margin_right_small"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="19.5%"
            android:layout_below="@id/txtCategoryFood"
            android:layout_toRightOf="@id/listViewFunShow"
            android:id="@+id/listViewStudyShow"
            android:scrollbars="horizontal"
            android:background="@color/studycolor"
            android:layout_marginRight="@dimen/item_margin_right_small"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_heightPercent="25%"
            app:layout_widthPercent="19.5%"
            android:layout_below="@id/txtCategoryFood"
            android:layout_toRightOf="@id/listViewStudyShow"
            android:id="@+id/listViewSocialShow"
            android:scrollbars="horizontal"
            android:background="@color/socialcolor"/>

        <Button
            android:id="@+id/btnEditDay"
            style="@style/btnStyleOrange"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/item_margin_top_small"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_edit_day"
            android:layout_below="@id/listViewFoodShow"
            />


    </android.support.percent.PercentRelativeLayout>


</android.support.percent.PercentRelativeLayout>
